# backend-template

./: README.md  pyproject.toml  requirements.txt
src/: .env.example  app.py  config.py  run.py
src/api/: common.py
src/api/v1/: __init__.py  admin.py  user.py
src/database/models/: __init__.py
src/middlewares/: rate_limit.py
src/services/: redis_service.py
src/utils/: endpoints.py  exceptions.py  responses.py
